Sprint6/Test/Tests/ValidPrograms/If.c
int main() {
   int a;
   a = 1;
   if (a == 1) {
      a = 3;
   }
   return a;
}
