Sprint6/Test/Tests/SemanticError/MissingFunctionCall.c
int foot(int a){
    int a = 3;
    return a;
}

int main(){
    return foot(1);
}